<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">CWDroid</string>
	<string name="api_key">F021DC4D41665F75</string>
	<string name="bug_key">34a994a3</string>


	<!-- General strings -->
	<string name="general_splashtext">CWDroid</string>
	<string name="loading">Lade %1$s im Hintergrund</string>
	<string name="yes">Ja</string>
	<string name="no">Nein</string>
	<string name="failure">Fehler</string>
	<string name="type">type</string>
	<string name="id">id</string>
	<string name="close_app">CWDroid beenden?</string>
	<string name="success_yes">YES</string>
	<string name="delete">Löschen</string>
	<string name="edit">Bearbeiten</string>
	<string name="copy">Kopieren</string>
	<string name="copying_text">Text wurde in die Zwischenablage kopiert</string>

	<string name="pull_to_load">Ziehen zum Refreshen</string>
	<string name="release_to_load">Jetzt loslassen</string>

	<!-- Tab specific -->
	<string name="tab_news_tag">news</string>
	<string name="tab_news_head">News</string>
	<string name="tab_blogs_tag">blogs</string>
	<string name="tab_blogs_head">Blogs</string>
	<string name="tab_msgs_tag">message</string>
	<string name="tab_msgs_head">Nachrichten</string>
	<string name="tab_shout_tag">shoutbox</string>
	<string name="tab_shout_head">Shoutbox</string>
	<string name="tab_overv_tag">overview</string>
	<string name="tab_overv_head">Übersicht</string>
	<string name="tab_board_tag">messageboard</string>
	<string name="tab_board_head">Forum</string>
	<string name="tab_singlenews_tag">singlenews</string>
	<string name="tab_singleblog_tag">singleblog</string>

	<string name="shoutbox">Shoutbox</string>
	<string name="board">Forum</string>

	<string name="news_filter">Filterfunktion</string>
	<string name="blogs_filter">Filterfunktion</string>
	<string name="msg_option">Postauswahl</string>

	<!-- overview -->
	<string name="home">Home</string>
	<string name="overview">Übersicht</string>
	<string name="overview_logged_as">Eingeloggt als:</string>
	<string name="overview_confirm">Bestätigen</string>
	<string name="overview_banner_details">%1$d neue %2$s</string>
	<string name="overview_banner_news_title">News</string>
	<string name="overview_banner_blogs_title">Blogs</string>
	<string name="overview_banner_msgs_title">Nachrichten</string>
	<string name="no_username_entered">Es wurde kein Username eingegeben, einloggen nicht möglich.
	</string>
	<string name="no_password_entered">Es wurde kein Passwort eingegeben, einloggen nicht möglich.
	</string>
	<string name="no_text_entered">Es wurde kein Text eingegeben, senden nicht möglich.
	</string>
	<string name="try_login">Einlogversuch gestartet...</string>
	<string name="already_logged_in">Schon eingeloggt.</string>
	<string name="logged_in">Sie wurden erfolgreich eingeloggt.</string>
	<string name="login_failed">Einlogversuch gescheitert.</string>
	<string name="logging_out">Sie werden ausgeloggt...</string>
	<string name="logged_out">Sie wurden erfolgreich ausgeloggt.</string>
	<string name="not_logged_in">Sie sind nicht eingeloggt.</string>

	<!-- options -->
	<string name="options">Optionen</string>

	<string name="opt_max_news_scroll">Max. News pro Aufruf (Scroll):</string>
	<string name="opt_max_news_actionbar">Max. News pro Aufruf (Actionbar):</string>
	<string name="opt_max_blogs_scroll">Max. Blogs pro Aufruf (Scroll):</string>
	<string name="opt_max_blogs_actionbar">Max. Blogs pro Aufruf (Actionbar):</string>
	<string name="opt_max_cmts">Max. Kommentare pro Seite:</string>


	<!-- subjects -->
	<string name="gallery">Galerie</string>
	<string name="comments">Kommentare</string>
	<string name="comments_amount">amount</string>
	<string name="comment_sending">Kommentar wird gesendet...</string>
	<string name="comment_sent">Kommentar wurde erfolgreich gepostet.</string>
	<string name="comment_delete_question">Wollen Sie wirklich diesen Kommentar löschen?</string>
	<string name="comment_deleting">Ihr Kommentar wird gelöscht...</string>
	<string name="comment_deleted">Der Kommentar wurde erfolgreich gelöscht.</string>
	<string name="comment_editing">Ihr Kommentar wird editiert...</string>
	<string name="comment_edited">Der Kommentar wurde erfolgreich editiert.</string>
	<string name="quote">Zitat</string>
	<string name="comment_fav">Favorit</string>
	
	<string name="cw_saving_all">Speichert alles (kann dauern)</string>
	<string name="cw_saved_all">Alles gespeichert</string>



	<!-- news -->
	<string name="news">News</string>
	<string name="news_area">Newsbereich</string>
	<string name="singlenews">Einzelnews</string>
	<string name="singlenews_area">Einzelnewsbereich</string>

	<string name="news_filter_all">Alle News</string>
	<string name="news_filter_only_ms">Nur Microsoft</string>
	<string name="news_filter_only_nin">Nur Nintendo</string>
	<string name="news_filter_only_sony">Nur Sony</string>

	<string name="news_author_by">von</string>
	<string name="news_author_unknown">[Newseditor]</string>
	<string name="singlenews_info">%1$s von %2$s</string>
	<string name="news_saving">Beginne mit dem Speichern aller angezeigten News...
	</string>
	<string name="news_half_saved">Die Hälfte (%1$d / %2$d) ist durch.</string>
	<string name="news_saved">%1$d News gespeichert.</string>

	<string name="news_sync">Sync</string>
	<string name="news_syncing">Lade volle News (Galerie, etc.)...</string>
	<string name="news_synced">Volle News geladen.</string>
	<string name="news_syncing_all">Sync alle News (Galerie, etc.)...</string>
	<string name="news_synced_all">Alle News gesynct.</string>

	<string name="news_fav">Favorit</string>

	<string name="news_save">Speichern</string>
	<string name="news_single_saving">Beginne mit dem Speichern der News...</string>
	<string name="news_single_saved">News gespeichert</string>

	<string name="gallery_discarding">Bildercache wird gelöscht...</string>
	<string name="gallery_discarded">Bildercache wurde gelöscht.</string>

	<!-- blogs -->
	<string name="blogs">Blogs</string>
	<string name="blog">Blog</string>
	<string name="blogs_area">Blogsbereich</string>
	<string name="singleblog">Einzelblog</string>
	<string name="singleblog_area">Einzelblogbereich</string>

	<string name="blogs_filter_all">Alle Blogs</string>
	<string name="blogs_filter_own">Eigene Blogs</string>
	<string name="blogs_filter_news">Newsblogs</string>

	<string name="blogs_saving">Beginne mit dem Speichern aller angezeigten Blogs...
	</string>
	<string name="blogs_half_saved">Die Hälfte (%1$d / %2$d) ist durch.</string>
	<string name="blogs_saved">%1$d Blogs gespeichert.</string>

	<string name="singleblogs_author">%1$s\'S BLOG</string>

	<string name="blog_delete_question">Wollen Sie wirklich diesen Blog löschen?</string>
	<string name="blog_deleting">Ihr Blog wird gelöscht...</string>
	<string name="blog_deleted">Der Blog wurde erfolgreich gelöscht.</string>
	<string name="blogswriter_sending">Blog wird abgeschickt...</string>
	<string name="blogswriter_sent">Blog wurde erfolgreich geschrieben.</string>
	<string name="blogswriter_too_short">Blogtext ist zu kurz. Mindestens 150 Zeichen benötigt.
	</string>
	<string name="blogswriter_blogtitle">Blogtitel:</string>
	<string name="blogswriter_blogcontent">Bloginhalt:</string>
	<string name="blogswriter_tags">Tags (mit Komma getrennt):</string>
	<string name="blogswriter_date">Datum:</string>
	<string name="blogswriter_time">Zeit:</string>
	<string name="blogswriter_visible">ist sichtbar</string>
	<string name="blogswriter_comments_allowed">Kommentare erlauben</string>
	<string name="blogswriter_newsblog">Ist ein Newsblog</string>
	<string name="blogmode_normal">normal</string>

	<!-- messages -->
	<string name="messages_area">Nachrichten</string>
	<string name="messages_filter_inbox">Eingang</string>
	<string name="messages_filter_outbox">Ausgang</string>
	
	<string name="messagewriter_sending">Nachricht wird gesendet...</string>
	<string name="messagewriter_sent">Nachricht wurde erfolgreich versendet.</string>
	<string name="messagewriter_recipients">Empfänger:</string>
	<string name="messagewriter_messagetitle">Titel:</string>
	<string name="messagewriter_message">Nachricht:</string>
	<string name="messagewriter_receipt">Lesebestätigung für diese Nachricht anfordern</string>
	<string name="messagewriter_copy">Kopie dieser Nachricht im Postausgang speichern</string>
	<string name="messagewriter_signature">Signatur anzeigen</string>
	<string name="messagewriter_parseurl">Links automatisch umwandeln</string>
	<string name="messagewriter_disablesmilies">Grafische Smileys deaktivieren</string>


	<string name="ok">OK</string>
	<string name="dateformat_detailed">EEEE, dd. MMMMM yyyy \'um\' HH:mm \'Uhr\'</string>
	<string-array name="msgs_filter_options">
		<item>Posteingang</item>
		<item>Postausgang</item>
	</string-array>
</resources>