<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:name="Blogs">
	<item
		android:id="@+id/menu_blogs_load_next"
		android:title="Lade Blogs (Netzwerk)">
	</item>
	<item
		android:id="@+id/menu_blogs_new_blog"
		android:title="Neuer Blog">
	</item>
	<item
		android:id="@+id/menu_news"
		android:title="@string/tab_news_head"
		android:icon="@drawable/tab_news">
	</item>
	<item
		android:id="@+id/menu_board"
		android:title="@string/tab_board_head"
		android:icon="@drawable/tab_board">
	</item>
	<item
		android:id="@+id/menu_msgs"
		android:title="@string/tab_msgs_head"
		android:icon="@drawable/tab_msgs">
	</item>
	<item
		android:id="@+id/navigation"
		android:title="Weiteres">
		<menu>
			<item
				android:id="@+id/menu_blogs_save_all"
				android:title="Speichere alle Blogs">
			</item>
			<item
				android:id="@+id/menu_blogs_load_saved"
				android:title="Lade nur gespeicherte Blogs">
			</item>
			<item
				android:id="@+id/menu_blogs_refresh"
				android:title="Refresh alle Blogs (Netzwerk)">
			</item>
			<item
				android:id="@+id/menu_blogs_discard"
				android:title="Verwerfe angezeigte Blogs">
			</item>
			<item
				android:id="@+id/menu_overview"
				android:title="@string/tab_overv_head"
				android:icon="@drawable/tab_overview">
			</item>
			<item
				android:id="@+id/menu_shoutbox"
				android:title="@string/tab_shout_head"
				android:icon="@drawable/tab_shout">
			</item>
		</menu>
	</item>
</menu>