<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:name="News">
	<item
		android:id="@+id/news_operations"
		android:title="News-Funktionen"
		android:icon="@drawable/tab_news">
		<menu>
			<item
				android:id="@+id/news_load_next"
				android:title="Lade weitere News">
			</item>
			<item
				android:id="@+id/news_load_saved"
				android:title="Lade nur gespeicherte News">
			</item>
			<item
				android:id="@+id/news_refresh"
				android:title="Refreshe alle News">
			</item>
			<item
				android:id="@+id/news_save_all"
				android:title="Speichere alle angezeigten News">
			</item>
			<item
				android:id="@+id/news_discard"
				android:title="Verwerfe angezeigte News">
			</item>
		</menu>
	</item>
	<item
		android:id="@+id/navigation"
		android:title="Navigation">
		<menu>
			<item
				android:id="@+id/menu_overview"
				android:title="@string/tab_overv_head"
				android:icon="@drawable/tab_overview">
			</item>
			<item
				android:id="@+id/menu_blogs"
				android:title="@string/tab_blogs_head"
				android:icon="@drawable/tab_blogs">
			</item>
			<item
				android:id="@+id/menu_msgs"
				android:title="@string/tab_msgs_head"
				android:icon="@drawable/tab_msgs">
			</item>
			<item
				android:id="@+id/menu_board"
				android:title="@string/tab_board_head"
				android:icon="@drawable/tab_board">
			</item>
			<item
				android:id="@+id/menu_shoutbox"
				android:title="@string/tab_shout_head"
				android:icon="@drawable/tab_shout">
			</item>
		</menu>
	</item>
</menu>