<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/overview_bg">
	<ScrollView
		android:id="@+id/messagewriter_scroll_view"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<LinearLayout
				android:id="@+id/messagewriter_fill_layout"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<TextView
					android:id="@+id/messagewriter_txt_recipients"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/messagewriter_text"
					android:layout_marginLeft="@dimen/messagewriter_text_margin"
					android:textStyle="bold"
					android:text="@string/messagewriter_recipients"/>
				<EditText
					android:id="@+id/messagewriter_edttxt_recipients"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:height="2dp"
					android:singleLine="true"
					android:textSize="15dp"/>
				<TextView
					android:id="@+id/messagewriter_txt_title"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/messagewriter_text"
					android:layout_marginLeft="@dimen/messagewriter_text_margin"
					android:layout_marginTop="@dimen/messagewriter_text_margin"
					android:textStyle="bold"
					android:text="@string/messagewriter_messagetitle"/>
				<EditText
					android:id="@+id/messagewriter_edttxt_title"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:height="2dp"
					android:singleLine="true"
					android:textSize="15dp"/>
				<TextView
					android:id="@+id/messagewriter_txt_message"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/messagewriter_text"
					android:layout_marginLeft="@dimen/messagewriter_text_margin"
					android:layout_marginTop="@dimen/messagewriter_text_margin"
					android:textStyle="bold"
					android:text="@string/messagewriter_message"/>
				<EditText
					android:id="@+id/messagewriter_edttxt_message"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:minLines="7"
					android:textSize="15dp"/>
				<CheckBox
					android:id="@+id/messagewriter_check_receipt"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/messagewriter_text"
					android:layout_marginLeft="@dimen/messagewriter_text_margin"
					android:text="@string/messagewriter_receipt"/>
				<CheckBox
					android:id="@+id/messagewriter_check_copy"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/messagewriter_text"
					android:layout_marginLeft="@dimen/messagewriter_text_margin"
					android:text="@string/messagewriter_copy"/>
				<CheckBox
					android:id="@+id/messagewriter_check_signature"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/messagewriter_text"
					android:layout_marginLeft="@dimen/messagewriter_text_margin"
					android:text="@string/messagewriter_signature"/>
				<CheckBox
					android:id="@+id/messagewriter_check_parseurl"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/messagewriter_text"
					android:layout_marginLeft="@dimen/messagewriter_text_margin"
					android:text="@string/messagewriter_parseurl"/>
				<CheckBox
					android:id="@+id/messagewriter_check_disablesmilies"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/messagewriter_text"
					android:layout_marginLeft="@dimen/messagewriter_text_margin"
					android:text="@string/messagewriter_disablesmilies"/>
			</LinearLayout>
			<Button
				android:id="@+id/messagewriter_bttn_submit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/messagewriter_fill_layout"
				android:layout_alignParentLeft="true"
				android:text="Abschicken"/>
		</RelativeLayout>
	</ScrollView>
</LinearLayout>